added syntax button to editor view controller

--- a/nsattrib-string-sample/nsattrib-string-sample/UI/FWTiPadStoryboard.storyboard
+++ b/nsattrib-string-sample/nsattrib-string-sample/UI/FWTiPadStoryboard.storyboard
@@ -67,6 +67,16 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="umt-z5-WPe">
+                                <rect key="frame" x="695" y="75" width="61" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Syntax">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="_presentHTMLSyntax:" destination="yDp-Yt-kgt" eventType="touchUpInside" id="ahQ-Xf-KWM"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
