--- a/nsattrib-string-sample/nsattrib-string-sample/UI/FWTiPadStoryboard.storyboard
+++ b/nsattrib-string-sample/nsattrib-string-sample/UI/FWTiPadStoryboard.storyboard
@@ -41,13 +41,13 @@
                                 <autoresizingMask key="autoresizingMask"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" name="CourierNewPSMT" family="Courier New" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                                 <connections>
                                     <outlet property="delegate" destination="yDp-Yt-kgt" id="FyA-Uz-MfY"/>
                                 </connections>
                             </textView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" id="HG3-ph-9Pc">
-                                <rect key="frame" x="20" y="593" width="730" height="410"/>
+                                <rect key="frame" x="20" y="593" width="730" height="431"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
