changed label title

--- a/nsattrib-string-sample/nsattrib-string-sample/UI/FWTiPadStoryboard.storyboard
+++ b/nsattrib-string-sample/nsattrib-string-sample/UI/FWTiPadStoryboard.storyboard
@@ -68,9 +68,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="umt-z5-WPe">
-                                <rect key="frame" x="695" y="75" width="61" height="44"/>
+                                <rect key="frame" x="647" y="75" width="108" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Syntax">
+                                <state key="normal" title="Sample HTML">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
